Closed Bug 319675 Opened 19 years ago Closed 19 years ago

Double-click-to-select highlights two words when used at beginning or end of line

Categories

(Core :: DOM: Selection, defect)

x86
Linux
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: aguertin+bugzilla, Assigned: sharparrow1)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

Double clicking at the beginning or end of a line selects the last word of the first line and the first word of the next line. 

Testcase in URL.

Possibly dupe of bug 319558 or regression from same checkin?
If anything it's probably a regression from bug 316281 which was checked in on 2005-12-07 15:08. The patch for bug 319558 could have exposed the regression (since now we don't crash anymore), but the real culprit is probably bug 316281.
Depends on: 316281
Attached patch PatchSplinter Review
The whole thing's a bit crazy, but this is good enough for now; this restores the old behavior.  (Forgot which bug, but there's one open about double-clicking at the beginning of a word selecting the word before.)
Assignee: selection → sharparrow1
Status: NEW → ASSIGNED
Attachment #205786 - Flags: review?(roc)
Comment on attachment 205786 [details] [diff] [review]
Patch

I'll check this in tomorrow. You need to get CVS access!
Attachment #205786 - Flags: superreview+
Attachment #205786 - Flags: review?(roc)
Attachment #205786 - Flags: review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
(In reply to comment #2)
> The whole thing's a bit crazy, but this is good enough for now; this restores
> the old behavior.  (Forgot which bug, but there's one open about
> double-clicking at the beginning of a word selecting the word before.)

For the record, that is bug 200098.

Blocks: 316281
No longer depends on: 316281
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: