Bug 319675. Don't cross line boundaries looking for double-click targets. patch by Eli Friedman, r=sr=roc